# Product-accounting-system-CPP-PostgreSQL

./: .gitignore  CMakeLists.txt  IS structure diagram.drawio  README.md  Untitled Diagram.drawio  mainwindow.cpp  mainwindow.h  mainwindow.ui
